--- a/css/master.css
+++ b/css/master.css
@@ -57,7 +57,9 @@ a.elsewhere:hover {
 body {
   background: #F7F7F7;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  display: flex;
+  justify-content: center; }
 
 content {
   padding: 0;
@@ -65,7 +67,12 @@ content {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  max-width: 1440px; }
+  max-width: 1440px;
+  border: 1px solid red;
+  justify-content: center; }
+  @media (max-width: 599px) {
+    content {
+      max-width: 100%; } }
 
 article {
   padding: 0;
@@ -279,7 +286,9 @@ a.elsewhere:hover {
 body {
   background: #F7F7F7;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  display: flex;
+  justify-content: center; }
 
 content {
   padding: 0;
@@ -287,7 +296,12 @@ content {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  max-width: 1440px; }
+  max-width: 1440px;
+  border: 1px solid red;
+  justify-content: center; }
+  @media (max-width: 599px) {
+    content {
+      max-width: 100%; } }
 
 article {
   padding: 0;
@@ -364,7 +378,7 @@ section.grid {
   max-width: 1440px; }
   @media (max-width: 599px) {
     section.grid {
-      justify-content: space-between; } }
+      justify-content: center; } }
   @media (min-width: 600px) {
     section.grid {
       justify-content: space-around; } }
