--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -19,7 +19,7 @@ content{
   flex-direction: column;
   flex-wrap: wrap;
   max-width: 1440px;
-  border: 1px solid red;
+  //border: 1px solid red;
   justify-content: center;
   @include for-phone-only{
     max-width:100%;
