--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -10,6 +10,7 @@ body{
   padding: 0;
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 content{
@@ -32,6 +33,8 @@ article{
 }
 
 nav{
+  max-width: 1440px;
+  //border: 1px solid red;
   display: flex;
   justify-content: space-between;
   align-items: center;
