--- a/css/master.css
+++ b/css/master.css
@@ -25,7 +25,7 @@ a.logo:hover, a.blog:hover, a.projects:hover {
   transition-duration: 0.2s; }
 
 ul {
-  font-size: 0.8em;
+  font-size: 1em;
   list-style: none;
   padding: 0; }
 
@@ -47,7 +47,7 @@ a.elsewhere {
   font-family: 'Roboto Mono', monospace;
   list-style: none;
   padding-right: 0.2em;
-  color: #0011FF;
+  color: #3E3535;
   text-decoration: none; }
 
 a.elsewhere:hover {
@@ -159,7 +159,7 @@ a.logo:hover, a.blog:hover, a.projects:hover {
   transition-duration: 0.2s; }
 
 ul {
-  font-size: 0.8em;
+  font-size: 1em;
   list-style: none;
   padding: 0; }
 
@@ -181,7 +181,7 @@ a.elsewhere {
   font-family: 'Roboto Mono', monospace;
   list-style: none;
   padding-right: 0.2em;
-  color: #0011FF;
+  color: #3E3535;
   text-decoration: none; }
 
 a.elsewhere:hover {
@@ -207,7 +207,7 @@ a.logo:hover, a.blog:hover, a.projects:hover {
   transition-duration: 0.2s; }
 
 ul {
-  font-size: 0.8em;
+  font-size: 1em;
   list-style: none;
   padding: 0; }
 
@@ -229,7 +229,7 @@ a.elsewhere {
   font-family: 'Roboto Mono', monospace;
   list-style: none;
   padding-right: 0.2em;
-  color: #0011FF;
+  color: #3E3535;
   text-decoration: none; }
 
 a.elsewhere:hover {
@@ -255,7 +255,7 @@ a.logo:hover, a.blog:hover, a.projects:hover {
   transition-duration: 0.2s; }
 
 ul {
-  font-size: 0.8em;
+  font-size: 1em;
   list-style: none;
   padding: 0; }
 
@@ -277,7 +277,7 @@ a.elsewhere {
   font-family: 'Roboto Mono', monospace;
   list-style: none;
   padding-right: 0.2em;
-  color: #0011FF;
+  color: #3E3535;
   text-decoration: none; }
 
 a.elsewhere:hover {
@@ -399,14 +399,16 @@ section.grid {
     min-width: 640px; }
     @media (max-width: 599px) {
       section.grid aside.project {
-        min-width: 320px; } }
+        min-width: 320px;
+        justify-content: flex-start; } }
     @media (min-width: 600px) {
       section.grid aside.project {
+        justify-content: flex-start;
         min-width: 500px;
         margin: 2em 10px;
         padding: 0; } }
   section.grid #swish-background {
-    background-image: url("../img/swish/main.png");
+    background-image: url("../img/placeholder.png");
     background-size: contain;
     background-repeat: no-repeat; }
   section.grid #milya-background {
@@ -422,11 +424,11 @@ section.grid {
     padding: 0;
     margin: 0;
     min-width: 640px;
-    min-height: 358px; }
+    min-height: 300px; }
     @media (max-width: 599px) {
       section.grid .project-image {
         min-width: 320px;
-        min-height: 220px; } }
+        min-height: 200px; } }
     @media (min-width: 600px) {
       section.grid .project-image {
         min-width: 500px;
