--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -36,8 +36,10 @@ section.grid {
     min-width: 640px;
     @include for-phone-only {
       min-width: 320px;
+      justify-content: flex-start;
     }
     @include for-tablet-portait-up {
+      justify-content: flex-start;
       min-width: 500px;
       margin: 2em 10px;
       padding: 0;
@@ -45,7 +47,7 @@ section.grid {
   }
 
   #swish-background {
-    background-image: url("../img/swish/main.png");
+    background-image: url("../img/placeholder.png");
     background-size: contain;
     background-repeat: no-repeat;
   }
@@ -70,10 +72,10 @@ section.grid {
     padding: 0;
     margin: 0;
     min-width: 640px;
-    min-height: 358px;
+    min-height: 300px;
     @include for-phone-only {
       min-width: 320px;
-      min-height: 220px;
+      min-height: 200px;
     }
     @include for-tablet-portait-up {
       min-width: 500px;
@@ -85,19 +87,16 @@ section.grid {
 
   article.project-description {
     margin-top: 20px;
-
     caption {
       margin: 0;
       font-size: 12px;
       font-weight: normal;
     }
-
     h2 {
       margin: 0;
       font-size: 22px;
       font-weight: bolder;
     }
-
     p {
       font-size: 18px;
       margin: 0;
