makes nav position fixed

--- a/css/master.css
+++ b/css/master.css
@@ -64,7 +64,7 @@ body {
 
 content {
   padding: 0;
-  margin: 1em 1em 1em 1em;
+  margin: 4em 1em 1em 1em;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -79,12 +79,23 @@ article {
   width: 100%; }
 
 nav {
-  max-width: 1440px;
+  transition: 0.3s all;
+  z-index: 1;
+  float: left;
+  top: 0;
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 1em; }
+  padding: 1em 0.5em 1em 0.5em; }
+  nav aside.menu {
+    margin-right: 1.5em;
+    display: flex;
+    flex-direction: row;
+    align-items: center; }
   nav aside.nav-left {
+    margin-left: 1em;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -294,7 +305,7 @@ body {
 
 content {
   padding: 0;
-  margin: 1em 1em 1em 1em;
+  margin: 4em 1em 1em 1em;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -309,12 +320,23 @@ article {
   width: 100%; }
 
 nav {
-  max-width: 1440px;
+  transition: 0.3s all;
+  z-index: 1;
+  float: left;
+  top: 0;
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 1em; }
+  padding: 1em 0.5em 1em 0.5em; }
+  nav aside.menu {
+    margin-right: 1.5em;
+    display: flex;
+    flex-direction: row;
+    align-items: center; }
   nav aside.nav-left {
+    margin-left: 1em;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -447,5 +469,9 @@ section.grid {
       font-size: 18px;
       margin: 0;
       font-weight: lighter; }
+
+.swish-grid {
+  border: 1px solid red;
+  min-height: 2000px; }
 
 /*# sourceMappingURL=master.css.map */
