--- a/css/master.css
+++ b/css/master.css
@@ -79,7 +79,6 @@ article {
   width: 100%; }
 
 nav {
-  transition: 0.3s all;
   z-index: 1;
   float: left;
   top: 0;
@@ -150,6 +149,17 @@ ul.projects {
   left: 0;
   transition: .25s;
   pointer-events: none; }
+
+.scroll-to-top-link {
+  display: none;
+  cursor: pointer;
+  display: block;
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  z-index: 1;
+  width: 23px;
+  height: 92px; }
 
 body {
   font-family: 'Inter UI', sans-serif; }
@@ -320,7 +330,6 @@ article {
   width: 100%; }
 
 nav {
-  transition: 0.3s all;
   z-index: 1;
   float: left;
   top: 0;
@@ -391,6 +400,17 @@ ul.projects {
   left: 0;
   transition: .25s;
   pointer-events: none; }
+
+.scroll-to-top-link {
+  display: none;
+  cursor: pointer;
+  display: block;
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  z-index: 1;
+  width: 23px;
+  height: 92px; }
 
 section.grid {
   margin-bottom: 7em;
