--- a/css/master.css
+++ b/css/master.css
@@ -60,7 +60,8 @@ body {
   padding: 0;
   display: flex;
   justify-content: center;
-  flex-direction: column; }
+  flex-direction: column;
+  flex-wrap: wrap; }
 
 content {
   padding: 0;
@@ -311,7 +312,8 @@ body {
   padding: 0;
   display: flex;
   justify-content: center;
-  flex-direction: column; }
+  flex-direction: column;
+  flex-wrap: wrap; }
 
 content {
   padding: 0;
@@ -425,56 +427,68 @@ section.grid {
       justify-content: center; } }
   @media (min-width: 600px) {
     section.grid {
-      justify-content: space-around; } }
+      justify-content: center; } }
   @media (min-width: 900px) {
     section.grid {
-      justify-content: space-around; } }
+      justify-content: center; } }
   @media (min-width: 1024px) {
     section.grid {
-      justify-content: space-around; } }
+      justify-content: center; } }
   section.grid aside.project {
     padding: 0 30px;
-    margin: 2em 0;
+    margin: 2em 2.5em 1em 2.5em;
     display: flex;
     flex-direction: column;
-    min-height: 420px;
     min-width: 640px; }
     @media (max-width: 599px) {
       section.grid aside.project {
         min-width: 320px;
-        justify-content: flex-start; } }
+        justify-content: center;
+        margin: 0 0 3em 0; } }
     @media (min-width: 600px) {
       section.grid aside.project {
-        justify-content: flex-start;
+        justify-content: center;
         min-width: 500px;
-        margin: 2em 10px;
+        margin: 0 0 3em 0;
         padding: 0; } }
+    @media (min-width: 900px) {
+      section.grid aside.project {
+        max-width: 420px;
+        margin: 0 2.3em 3em 2.3em; } }
   section.grid #swish-background {
-    background-image: url("../img/placeholder.png");
-    background-size: contain;
+    background-image: url("../img/swish/main.png");
+    background-size: cover;
     background-repeat: no-repeat; }
   section.grid #milya-background {
-    background-size: contain;
+    background-image: url("../img/milya-placeholder.png");
+    background-size: cover;
     background-repeat: no-repeat; }
   section.grid #creditsuisse-background {
-    background-size: contain;
+    background-image: url("../img/placeholder.png");
+    background-size: cover;
     background-repeat: no-repeat; }
   section.grid #movingposters-background {
-    background-size: contain;
+    background-image: url("../img/placeholder.png");
+    background-size: cover;
     background-repeat: no-repeat; }
   section.grid .project-image {
     padding: 0;
     margin: 0;
     min-width: 640px;
-    min-height: 300px; }
+    height: 420px; }
     @media (max-width: 599px) {
       section.grid .project-image {
         min-width: 320px;
-        min-height: 200px; } }
+        height: 220px; } }
     @media (min-width: 600px) {
       section.grid .project-image {
-        min-width: 500px;
-        padding: 0; } }
+        min-width: 400px;
+        padding: 0;
+        height: 300px; } }
+    @media (min-width: 900px) {
+      section.grid .project-image {
+        max-width: 490px;
+        height: 300px; } }
   section.grid article.project-description {
     margin-top: 20px; }
     section.grid article.project-description caption {
