--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -17,70 +17,83 @@ section.grid {
     justify-content: center;
   }
   @include for-tablet-portait-up {
-    justify-content: space-around;
+    justify-content: center;
   }
   @include for-tablet-landscape-up {
-    justify-content: space-around;
+    justify-content: center;
   }
   @include for-desktop {
-    justify-content: space-around;
+    justify-content: center;
   }
 
   aside.project {
     //border: 1px solid red;
     padding: 0 30px;
-    margin: 2em 0;
+    margin: 2em 2.5em 1em 2.5em;
     display: flex;
     flex-direction: column;
-    min-height: 420px;
+    //height: 420px;
     min-width: 640px;
     @include for-phone-only {
       min-width: 320px;
-      justify-content: flex-start;
+      justify-content: center;
+      margin: 0 0 3em 0;
     }
     @include for-tablet-portait-up {
-      justify-content: flex-start;
+      justify-content: center;
       min-width: 500px;
-      margin: 2em 10px;
+    margin: 0 0 3em 0;
       padding: 0;
+    }
+    @include for-tablet-landscape-up{
+      max-width: 420px;
+      margin: 0 2.3em 3em 2.3em;
     }
   }
 
   #swish-background {
-    background-image: url("../img/placeholder.png");
-    background-size: contain;
+    background-image: url("../img/swish/main.png");
+    background-size: cover;
     background-repeat: no-repeat;
   }
   #milya-background {
-    background-size: contain;
+    background-image:url("../img/milya-placeholder.png");
+    background-size: cover;
     background-repeat: no-repeat;
   }
   #creditsuisse-background{
-    background-size: contain;
+    background-image:url("../img/placeholder.png");
+    background-size: cover;
     background-repeat: no-repeat;
   }
 
   #movingposters-background {
-    background-size: contain;
+    background-image:url("../img/placeholder.png");
+    background-size: cover;
     background-repeat: no-repeat;
   }
 
 
   .project-image {
-    //border: 1px solid red;
+    //border: 1px solid blue;
     padding: 0;
     margin: 0;
     min-width: 640px;
-    min-height: 300px;
+    height: 420px;
     @include for-phone-only {
       min-width: 320px;
-      min-height: 200px;
+      height: 220px;
     }
     @include for-tablet-portait-up {
-      min-width: 500px;
-      //margin: 2em 10px;
+      min-width: 400px;
       padding: 0;
+      height: 300px;
     }
+    @include for-tablet-landscape-up{
+      max-width: 490px;
+      height: 300px;
+    }
+
   }
 
   article.project-description {
