--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -6,6 +6,7 @@
 section.grid {
   //border: 1px solid red;
   //padding: 1em 1em 1em 1em;
+  margin-top: 4em;
   margin-bottom: 7em;
   display: flex;
   align-content: flex-start;
