--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -11,7 +11,7 @@ body{
   justify-content: space-between;
   flex-direction: column;
   flex-wrap:wrap;
-  border: 1px solid blue;
+  //border: 1px solid blue;
 }
 
 content{
@@ -20,8 +20,7 @@ content{
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  //max-width: 1440px;
-  border: 1px solid red;
+  //border: 1px solid red;
   justify-content: center;
   @include for-phone-only{
     max-width:100%;
