Change Project to CSS GRID

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -3,10 +3,10 @@
   @media (max-width: 599px) {@content;}
 }
 @mixin for-tablet-portait-up{
-  @media (min-width:600px) {@content;}
+  @media (max-width:600px) {@content;}
 }
 @mixin for-tablet-landscape-up{
-  @media (min-width:900px) {@content;}
+  @media (max-width:900px) {@content;}
 }
 @mixin for-desktop{
   @media (min-width: 1024px) {@content;}
