--- a/scss/_colours.scss
+++ b/scss/_colours.scss
@@ -6,6 +6,7 @@ $default-text:#3E3535;
 $link-active:#0011FF;
 $link-hover:#FF3769;
 $white:#FFFFFF;
+$place-holder: #EBEBEB;
 
 //----Project Colours---//
 
