--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,118 +1,53 @@
-@import "mixins";
-@import "typography";
-@import "colours";
-@import "layout";
-@import "navigation";
-@import "footer";
+@import 'colours';
+@import 'mixins';
 
-//------ Project Main Page ---//
-section.grid {
-
-  margin-top: 4em;
-  margin-bottom: 7em;
-  display: flex;
-  align-content: flex-start;
-  flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: wrap;
+section.project-grid{
+  //border: 1px solid blue;
+  margin-top: 5em;
+  width: 1440px;
   max-width: 1440px;
-  @include for-phone-only {
-    justify-content: center;
-  }
-  @include for-tablet-portait-up {
-    justify-content: center;
-  }
-  @include for-tablet-landscape-up {
-    justify-content: center;
-  }
-  @include for-desktop {
-    justify-content: center;
-  }
-
-  aside.project {
-    padding: 0 30px;
-    margin: 2em 2.5em 1em 2.5em;
-    display: flex;
-    flex-direction: column;
-    min-width: 640px;
-    @include for-phone-only {
-      min-width: 320px;
-      justify-content: center;
-      margin: 0 0 3em 0;
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-row-gap: 65px;
+  grid-column-gap: 30px;
+  @include for-phone-only{
+    grid-template-columns: 1fr;
+    grid-row-gap: 40px;
     }
-    @include for-tablet-portait-up {
-      justify-content: center;
-      min-width: 500px;
-    margin: 0 0 3em 0;
-      padding: 0;
-    }
-    @include for-tablet-landscape-up{
-      max-width: 420px;
-      margin: 0 2.3em 3em 2.3em;
-    }
+  @include for-tablet-portait-up{
+    grid-template-columns: 1fr;
+    grid-row-gap: 40px;
   }
-
-  #swish-background {
-    background-image: url("../img/swish/main.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  #milya-background {
-    background-image:url("../img/milya-placeholder.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  #creditsuisse-background{
-    background-image:url("../img/placeholder.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-
-  #movingposters-background {
-    background-image:url("../img/placeholder.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-
-
-  .project-image {
-    //border: 1px solid blue;
-    padding: 0;
-    margin: 0;
-    min-width: 640px;
-    height: 420px;
-    @include for-phone-only {
-      min-width: 320px;
-      height: 220px;
-    }
-    @include for-tablet-portait-up {
-      min-width: 400px;
-      padding: 0;
-      height: 300px;
-    }
-    @include for-tablet-landscape-up{
-      max-width: 490px;
-      height: 300px;
-    }
-
-  }
-
-  article.project-description {
-    margin-top: 20px;
+  @include for-tablet-landscape-up{
+    grid-template-columns: 1fr;
+    grid-row-gap: 40px;
   }
 }
 
-
-.swish-grid{
-  min-height: 2000px;
+.project-image{
+  background-color: $place-holder;
+  height: 350px;
+  margin: 0;
+  @include for-phone-only{
+    height: 250px;
+    }
 }
 
-// Project Boxes //
-section.container{
-  display:flex;
-  flex-direction: column;
-  border: 1px solid red;
-  max-width: 1440px;
-  min-height: 900px;
-  margin-bottom: 100px;
+
+.project-box{
+  align-self: start;
+  margin: 2em;
+}
+
+.project-info{
+  max-width: 580px;
+  margin: 1.5em 0 0 0;
+  line-height: 22px;
+}
+
+#milya-background{
+  background-image: url("/img/milya-placeholder.png");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
