--- a/scss/master.scss
+++ b/scss/master.scss
@@ -9,3 +9,19 @@
 @import "milya";
 @import "swish";
 @import "movingposters";
+
+html{
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  font-family: sans-serif;
+  flex-direction: column;
+  //border: 1px solid red;
+}
