--- a/scss/master.scss
+++ b/scss/master.scss
@@ -18,10 +18,9 @@ html{
 body{
   display: flex;
   justify-content: center;
-  align-items: center;
   padding: 0;
   margin: 0;
   font-family: sans-serif;
-  flex-direction: column;
-  //border: 1px solid red;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
