--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,9 +1,9 @@
 @import 'colours';
 @import 'mixins';
+@import 'typography';
 
 section.project-grid{
-  //border: 1px solid blue;
-  margin-top: 5em;
+  margin-top: 4em;
   width: 1440px;
   max-width: 1440px;
   display:grid;
