--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -12,6 +12,7 @@ article.footer{
   }
   border-top: 1px solid $default-text;
     aside.footer-link{
+      margin-left: 0.8em;
       max-width: 333px;
      margin-right: 35px;
     }
