--- a/css/master.css
+++ b/css/master.css
@@ -246,7 +246,7 @@ p {
   font-weight: lighter; }
 
 section.project-grid {
-  margin-top: 4em;
+  margin: 4em 0 4em 0;
   width: 1440px;
   max-width: 1440px;
   display: grid;
@@ -287,27 +287,35 @@ section.project-grid {
 #milya-background {
   background-image: url("/img/milya-placeholder.png");
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  background-position: center; }
 
 #swish-background {
-  background-image: url("/img/milya-placeholder.png");
+  background-image: url("/img/swish-placeholder.png");
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  background-position: center; }
 
 #creditsuisse-background {
   background-image: url("/img/milya-placeholder.png");
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  background-position: center; }
 
 #movingposters-background {
-  background-image: url("/img/milya-placeholder.png");
+  background-image: url("/img/movingposter-placeholder.png");
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  background-position: center; }
 
 #illustrations-background {
-  background-image: url("/img/milya-placeholder.png");
+  background-image: url("/img/illustration-placeholder.png");
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  background-position: center; }
+  @media only screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    #illustrations-background {
+      background-image: url("/img/illustration-placeholder@2x.png"); } }
 
 body {
   font-family: 'Inter UI', sans-serif; }
