--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -3,7 +3,7 @@
 @import 'typography';
 
 section.project-grid{
-  margin-top: 4em;
+  margin: 4em 0 4em 0;
   width: 1440px;
   max-width: 1440px;
   display:grid;
@@ -47,24 +47,29 @@ section.project-grid{
   background-image: url("/img/milya-placeholder.png");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
 #swish-background{
-  background-image: url("/img/milya-placeholder.png");
+  background-image: url("/img/swish-placeholder.png");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
 #creditsuisse-background{
   background-image: url("/img/milya-placeholder.png");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
 #movingposters-background{
-  background-image: url("/img/milya-placeholder.png");
+  background-image: url("/img/movingposter-placeholder.png");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
 #illustrations-background{
-  background-image: url("/img/milya-placeholder.png");
+  @include retinize("/img/illustration-placeholder","png");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
