changes bk col temp

--- a/css/master.css
+++ b/css/master.css
@@ -520,7 +520,7 @@ nav {
       padding: 0 0 0 0; }
 
 nav.scroll {
-  background-color: black;
+  background-color: #F7F7F7;
   color: #eef; }
 
 html {
