--- a/css/master.css
+++ b/css/master.css
@@ -33,7 +33,6 @@ ul {
 
 a.elsewhere {
   font-size: 1em;
-  font-family: 'Roboto Mono', monospace;
   list-style: none;
   padding-right: 0.2em;
   color: #3E3535;
@@ -137,7 +136,6 @@ ul {
 
 a.elsewhere {
   font-size: 1em;
-  font-family: 'Roboto Mono', monospace;
   list-style: none;
   padding-right: 0.2em;
   color: #3E3535;
@@ -206,7 +204,6 @@ ul {
 
 a.elsewhere {
   font-size: 1em;
-  font-family: 'Roboto Mono', monospace;
   list-style: none;
   padding-right: 0.2em;
   color: #3E3535;
@@ -319,6 +316,36 @@ section.project-grid {
   background-repeat: no-repeat;
   background-position: center; }
 
+section.illustration-grid {
+  display: grid;
+  margin: 4em 0 4em 0;
+  width: 1440px;
+  max-width: 1440px;
+  min-height: 840px;
+  grid-column-gap: 50px;
+  grid-row-gap: 50px;
+  grid-template-columns: 1fr; }
+  @media (max-width: 599px) {
+    section.illustration-grid {
+      grid-template-columns: 1fr;
+      grid-row-gap: 40px; } }
+  @media (max-width: 600px) {
+    section.illustration-grid {
+      grid-template-columns: 1fr;
+      grid-row-gap: 40px; } }
+  @media (max-width: 900px) {
+    section.illustration-grid {
+      grid-template-columns: 1fr;
+      grid-row-gap: 40px; } }
+  section.illustration-grid article.illustration-front {
+    width: 100%;
+    height: 840px; }
+  section.illustration-grid #illustration-front {
+    background-image: url("../img/illustrations/illustration-front.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; }
+
 body {
   font-family: 'Inter UI', sans-serif; }
 
@@ -344,7 +371,6 @@ ul {
 
 a.elsewhere {
   font-size: 1em;
-  font-family: 'Roboto Mono', monospace;
   list-style: none;
   padding-right: 0.2em;
   color: #3E3535;
@@ -438,7 +464,6 @@ ul {
 
 a.elsewhere {
   font-size: 1em;
-  font-family: 'Roboto Mono', monospace;
   list-style: none;
   padding-right: 0.2em;
   color: #3E3535;
