--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -74,3 +74,44 @@ section.project-grid{
   background-repeat: no-repeat;
   background-position: center;
 }
+
+
+//----- Illustrations Grid ---- //
+
+section.illustration-grid{
+  display:grid;
+  margin: 4em 0 4em 0;
+  width: 1440px;
+  max-width: 1440px;
+  min-height:840px;
+  grid-column-gap: 50px;
+  grid-row-gap: 50px;
+  grid-template-columns: 1fr;
+  @include for-phone-only{
+    grid-template-columns: 1fr;
+    grid-row-gap: 40px;
+    }
+  @include for-tablet-portait-up{
+    grid-template-columns: 1fr;
+    grid-row-gap: 40px;
+  }
+  @include for-tablet-landscape-up{
+    grid-template-columns: 1fr;
+    grid-row-gap: 40px;
+  }
+    article.illustration-front{
+      width: 100%;
+      height: 840px;
+    }
+
+    //---Illustrations images --//
+    #illustration-front{
+      background-image: url("../img/illustrations/illustration-front.png");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+
+
+}
